--- a/styles.css
+++ b/styles.css
@@ -6,28 +6,51 @@ html {
   text-align: justify;
 }
 
-body > header, body > main, body > footer {
+body {
+  background-color: #eee;
+}
+
+body > header, body > main {
   margin: 0 auto;
-  max-width: 30rem;
+  max-width: 25rem;
 }
 
 body > header {
-  margin-top: 2.5rem;
+  background: white;
+  border: 10px double black;
   margin-bottom: 1.5rem;
+  margin-top: 2.5rem;
+  text-align: justify;
+}
+
+header > p {
+  margin: 1rem;
+}
+
+header > p:first-child {
   text-align: center;
   white-space: pre;
-  border: 10px double black;
+}
+
+.byline {
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  margin: 0 0 1rem 0;
+  padding: 1rem;
+  text-align: center;
+}
+
+.place, .contents {
+  text-align: center;
+}
+
+.use {
+  margin-left: 2rem;
+  text-indent: -1rem;
 }
 
 h1 {
   margin-bottom: 0;
-}
-
-body > footer {
-  font-size: 75%;
-  margin-bottom: 2rem;
-  margin-top: 5rem;
-  text-align: right;
 }
 
 section {
@@ -59,4 +82,12 @@ header h1 {
 
 .small {
   font-size: 80%;
+}
+
+.form {
+  display: block;
+  text-align: center;
+  margin-bottom: 0.54rem;
+  margin-top: 0.54rem;
+  font-size: 150%;
 }
